--- a/etc/creds.conf
+++ b/etc/creds.conf
@@ -1,3 +1,3 @@
 'impartus_url': 'http://172.16.3.20'
-'login_email': 'f20212382@hyderabad.bits-pilani.ac.in'
-'password': 'Lisa@2023'
+'login_email': 'fxxxxxxxx@hyderabad.bits-pilani.ac.in'
+'password': 'xxxxxxxxxx'
